# LatentFrag

./: .gitignore  LICENSE  README.md  README_DATA.md  install.sh  pyproject.toml  test_setup.py  tox.ini
.github/: copilot-instructions.md
configs/: demo_sampling.sh  eval_strategies_all_pocket.json  train_encoder_example.yml  train_fm_example.yml
demo_data/: 1MVC_BM6.sdf
src/latentfrag/: __init__.py
src/latentfrag/encoder/: predict_frag.py  predict_protein.py  pymol.py  test.py  train.py  visualize_embedding.py
src/latentfrag/encoder/data/: build_chain_entity_mapping.py  const.py  create_embedding_library.py  create_fragments_ev.py  extract_ncis.py  fragmentation_utils.py  interaction_fp.py  make_frag_library.py  negative_frag_pair_tanimoto.py  pdb_dataset.py  postfiltering_fragments.py  process_pdb.py  protonate.py  train_test_split_frag.py
src/latentfrag/encoder/dmasif/: geometry_processing.py  helper.py  model.py
src/latentfrag/encoder/ligand_encoder/: embedding.py  gnn.py  graphtransformer.py  gt_layers.py  gt_utils.py
src/latentfrag/encoder/models/: lightning_modules.py  nci_classifier.py
src/latentfrag/encoder/utils/: constants.py  data.py  io.py  misc.py  scatter.py
src/latentfrag/fm/: sample.py  train.py
src/latentfrag/fm/analysis/: evaluate.py  frag_metrics.py  interactions_plip.py  metrics.py  sample_eval.py  sbdd_metrics.py  visualization_utils.py
src/latentfrag/fm/data/: coarse2fine.py  data_utils.py  dataset.py  frag_frames.py  fragment.py  molecule_builder.py  msms.py  normal_modes.py  pdb_split.py  (+2 more)
tests/: test_pykeops_replacement.py
(+11 files in other folders)
